<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProductIngredientsFragment">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/ingredients_chips"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/form_outer_margin"
        android:layout_marginTop="@dimen/form_outer_margin"
        android:layout_marginEnd="@dimen/form_outer_margin"
        android:visibility="visible"
        app:chipSpacingVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredients_text">

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/veg_chips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_outer_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dietary_text"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/none_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/none"
            app:checkedIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/vegetarian_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/vegetarian"
            app:checkedIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/vegan_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/vegan"
            app:checkedIconVisible="false" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/ingredients_text"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dietary_text"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_outer_margin"
        android:text="@string/dietary_info"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collapsed_search_card" />

    <TextView
        android:id="@+id/vegetarian_disabled_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_info_blue_24dp"
        android:drawablePadding="5dp"
        android:paddingStart="@dimen/form_outer_margin"
        android:paddingEnd="@dimen/form_outer_margin"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/veg_chips"
        tools:text="Vegetarian disabled"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/vegan_disabled_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_small_margin"
        android:drawableStart="@drawable/ic_info_blue_24dp"
        android:drawablePadding="5dp"
        android:paddingStart="@dimen/form_outer_margin"
        android:paddingEnd="@dimen/form_outer_margin"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vegetarian_disabled_text"
        tools:text="Vegan disabled"
        tools:visibility="visible" />

    <androidx.cardview.widget.CardView
        android:id="@+id/expanded_search_card"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="@dimen/form_outer_margin"
        android:layout_marginTop="@dimen/form_outer_margin"
        android:layout_marginEnd="@dimen/form_outer_margin"
        android:visibility="invisible"
        app:cardCornerRadius="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredients_chips">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <SearchView
                android:id="@+id/ingredient_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:iconifiedByDefault="false"
                android:searchIcon="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/recycler_card"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:top="0dp"
                app:cardCornerRadius="0dp"
                app:layout_constraintBottom_toTopOf="@+id/collapse_card_image"
                app:layout_constraintTop_toBottomOf="@+id/ingredient_search">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/product_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:scrollbars="vertical" />
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/collapse_card_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="20dp"
                android:paddingTop="7dp"
                android:paddingEnd="20dp"
                android:paddingBottom="7dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_close_gray_30dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/collapsed_search_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_outer_margin"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="16dp"
        app:contentPadding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredients_chips">

        <TextView
            android:id="@+id/expand_card_text"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expand_search_card" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>